# localwhisper

./: .gitignore  README.md  config.example.yaml  pyproject.toml  pytest.ini  ruff.toml
docs/: index.html
docs/plans/: 2026-03-29-double-tap-feedback.md
docs/specs/: 2026-03-29-double-tap-feedback.md
localwhisper/: app.py  clipboard.py  config.py  constants.py  corrections.py  dictionary.py  engine.py  events.py  feedback.py  feedback_window.py  focus.py  history.py  hotkey.py  logging_config.py  login_item.py  models.py  oauth.py  overlay.py  paths.py  postprocessor.py  preflight.py  recorder.py  sounds.py  streaming.py  transcriber.py
localwhisper/settings/: __init__.py  controls.py  window.py
localwhisper/settings/tabs/: advanced.py  audio.py  general.py  models.py
scripts/: generate_test_fixtures.py  install.sh  run.sh  verify.sh
tests/: conftest.py  test_config.py  test_corrections.py  test_dictionary.py  test_engine.py  test_engine_dictionary.py  test_feedback_window.py  test_focus.py  test_history.py  test_hotkey_double_click.py  test_icon.py  test_integration.py  test_login_item.py  test_models.py  test_oauth.py  test_overlay.py  test_paths.py  test_postprocessor.py  test_quick.py  test_recorder.py  test_settings.py  test_streaming.py  test_transcriber.py  test_unit.py
