[project]
name = "localwhisper"
version = "0.1.0"
description = "Local speech-to-text for macOS with Russian + English tech terms"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.5.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ServiceManagement>=10.0",
    "requests>=2.31.0",
    "soundfile>=0.12.0",
]

[project.scripts]
localwhisper = "localwhisper.app:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-timeout>=2.2"]
packaging = ["pyinstaller>=6.11.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
